--- a/index.html
+++ b/index.html
@@ -725,7 +725,7 @@
         <div class="card-body" style="height: 250px; width: 80%; margin: 0 auto;">
             <h4 class="mb-0">Ramya Errabelli</h4>
             <img src="https://t3.ftcdn.net/jpg/05/31/76/76/360_F_531767656_9ZYTdKAhUXatTUAUp7iYi6coq9dy3nSF.jpg" alt="" style="width: auto; height: 30px;">
-            <p class="card-text">I'm a doctor & I was suffering with chronic ailments in my life . I was fed up with all treatments then my cousin suggested me Sri Sri tattvapanchakarma treatment. After treatment of madam I got relief in 15 days only.</p>
+            <p class="card-text">I'm a doctor & I was suffering with chronic ailments in my life . my cousin suggested me Sri Sri tattvapanchakarma treatment. After treatment of madam I got relief in 15 days only.</p>
         </div>
     </div>
 </div>
@@ -763,7 +763,7 @@
         <div class="card-body" style="height: 250px; width: 80%; margin: 0 auto;">
             <h4 class="mb-0">VenkataSubbarao Paruchuri</h4>
             <img src="https://t3.ftcdn.net/jpg/05/31/76/76/360_F_531767656_9ZYTdKAhUXatTUAUp7iYi6coq9dy3nSF.jpg" alt="" style="width: auto; height: 30px;">
-            <p class="card-text">I approached Dr.Shruti Madam in Sri Sri Ayurvedic clinic, Gachibowli. She had done treatment by using crystal once in a month. Treatment went very well and my hand is very comfortable to do any activity now.</p>
+            <p class="card-text">I approached Dr.Shruti Madam in Sri Sri Ayurvedic clinic, She had done treatment by using crystal once in a month. Treatment went very well and my hand is very comfortable to do any activity now.</p>
         </div>
     </div>
 </div>
@@ -775,7 +775,7 @@
         <div class="card-body" style="height: 250px; width: 80%; margin: 0 auto;">
             <h4 class="mb-0">Dabbiru Vidyavathi</h4>
             <img src="https://t3.ftcdn.net/jpg/05/31/76/76/360_F_531767656_9ZYTdKAhUXatTUAUp7iYi6coq9dy3nSF.jpg" alt="" style="width: auto; height: 30px;">
-            <p class="card-text">For severe back pain, I sought treatment at Sri Sri Tattva Panchakarma, Gachibowli. I experienced great results within a few weeks. I am grateful to Dr. Shruthi and her team for treatment and guidance.</p>
+            <p class="card-text">For severe back pain, I sought treatment at Sri Sri Tattva Panchakarma. I experienced great results. I am grateful to Dr. Shruthi and her team for treatment and guidance.</p>
         </div>
     </div>
 </div>
@@ -812,7 +812,7 @@
         <div class="card-body" style="height: 250px; width: 80%; margin: 0 auto;">
             <h4 class="mb-0">Sailaja Anand</h4>
             <img src="https://t3.ftcdn.net/jpg/05/31/76/76/360_F_531767656_9ZYTdKAhUXatTUAUp7iYi6coq9dy3nSF.jpg" alt="" style="width: auto; height: 30px;">
-            <p class="card-text">Consultation with Dr. Shruti ji regarding some nagging digestion issues and she had suggested me Sri Sri Tattva's online. At the end of it I had lost weight and also my sugar levels have come to normal without any medication.</p>
+            <p class="card-text">Consultation with Dr. Shruti ji regarding some nagging digestion issues and she had suggested me Sri Sri Tattva's online. I had lost weight and also my sugar levels have come to normal without any medication.</p>
         </div>
     </div>
 </div>
@@ -825,7 +825,7 @@
         <div class="card-body" style="height: 250px; width: 80%; margin: 0 auto;">
             <h4 class="mb-0">Chitra Balu</h4>
             <img src="https://t3.ftcdn.net/jpg/05/31/76/76/360_F_531767656_9ZYTdKAhUXatTUAUp7iYi6coq9dy3nSF.jpg" alt="" style="width: auto; height: 30px;">
-            <p class="card-text">Excellent services, cordial, friendly, family atmosphere. Best doctors!! Diagnosis of Dr. Shruthi is excellent. Whenever I show to Dr. Shruthi, I feel confident and I am taken care of. I have stopped going to Allopathic doctors and medicines.</p>
+            <p class="card-text">Excellent services, cordial, friendly, family atmosphere. Best doctors!! Diagnosis of Dr. Shruthi is excellent. Whenever I show to Dr. Shruthi. I have stopped going to Allopathic doctors and medicines.</p>
         </div>
     </div>
 </div>
@@ -838,7 +838,7 @@
         <div class="card-body" style="height: 250px; width: 80%; margin: 0 auto;">
             <h4 class="mb-0">Manikya Lakshmi</h4>
             <img src="https://t3.ftcdn.net/jpg/05/31/76/76/360_F_531767656_9ZYTdKAhUXatTUAUp7iYi6coq9dy3nSF.jpg" alt="" style="width: auto; height: 30px;">
-            <p class="card-text">I went to Dr. Sruthy around two and a half years ago with acute wheeze and bronchitis. I recovered quite well after taking her treatment. For the last two years, I barely felt the need for any medicine related to these issues.</p>
+            <p class="card-text">I went to Dr. Sruthy. with acute wheeze and bronchitis. I recovered quite well after taking her treatment. For the last two years, I barely felt the need for any medicine related to these issues.</p>
         </div>
     </div>
 </div>
