--- a/index.html
+++ b/index.html
@@ -812,7 +812,7 @@
         <div class="card-body" style="height: 250px; width: 80%; margin: 0 auto;">
             <h4 class="mb-0">Sailaja Anand</h4>
             <img src="https://t3.ftcdn.net/jpg/05/31/76/76/360_F_531767656_9ZYTdKAhUXatTUAUp7iYi6coq9dy3nSF.jpg" alt="" style="width: auto; height: 30px;">
-            <p class="card-text">Consultation with Dr. Shruti ji regarding some nagging digestion issues and she had suggested me Sri Sri Tattva's online. I had lost weight and also my sugar levels have come to normal without any medication.</p>
+            <p class="card-text">Consultation with Dr. Shruti ji regarding some nagging digestion issues. I had lost weight and also my sugar levels have come to normal without any medication.</p>
         </div>
     </div>
 </div>
