--- a/contactUs.html
+++ b/contactUs.html
@@ -35,25 +35,18 @@
 	============================================= -->
 	<title>Shankari Ayurveda - Contact Us</title>
 
-	<style>
-    @media screen and (max-width: 768px) {
-        .banner-section {
-            height: 40vh;
-        }
-        .banner-heading {
-            font-size: 2rem;
-        }
-    }
-    @media screen and (max-width: 480px) {
-        .banner-section {
-            height: 30vh;
-        }
-        .banner-heading {
-            font-size: 1.5rem;
-        }
-    }
-</style>
 
+		<style>
+
+	@media screen and (max-width: 360px) {
+		.banner-section {
+			max-height: 20vh ;
+		}
+		.banner-heading {
+			font-size: 10px;
+		}
+	}
+</style>
 
 </head>
 
