--- a/premium-nadi-pariksha.html
+++ b/premium-nadi-pariksha.html
@@ -95,7 +95,7 @@
 					<div class="row gx-4 gy-5">
 						<div class="col-lg-8 col-6 d-flex justify-content-center">
 							<div class="container m-0 p-0 d-flex align-items-center">
-								<img src="./images/icons/Shankari_Logo_Latest.png" alt="Shankari Logo" style="width: 250px; height: auto;">
+								<a href="./index.html"></a><img src="./images/icons/Shankari_Logo_Latest.png" alt="Shankari Logo" style="width: 250px; height: auto;">
 							</div>
 						</div>
 					
