--- a/General nadi-parikshna.html
+++ b/General nadi-parikshna.html
@@ -96,7 +96,7 @@
 					<div class="row gx-4 gy-5">
 						<div class="col-lg-8 col-6 d-flex justify-content-center">
 							<div class="container m-0 p-0 d-flex align-items-center">
-								<img src="./images/icons/Shankari_Logo_Latest.png" alt="Shankari Logo" style="width: 250px; height: auto;">
+								<a href="./index.html"><img src="./images/icons/Shankari_Logo_Latest.png" alt="Shankari Logo" style="width: 250px; height: auto;"></a>
 							</div>
 						</div>
 					
@@ -106,7 +106,7 @@
 								<ul class="list-unstyled">
 									<li class="mb-3">
 										<a href="tel:+91 9959211800" class="d-flex">
-											<i class="me-3 bi-telephone-fill"></i>+9908157287
+											<i class="me-3 bi-telephone-fill"></i>+91 9908157287
 										</a>
 									</li>
 									<li class="mb-3">
