--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 		</header> -->
 
 
-		<nav class="navbar navbar-expand-lg fixed-top ps-lg-5 pe-lg-5" style="background-color: #873f19; color: white; ">
+		<nav class="navbar navbar-expand-lg fixed-top ps-lg-5 pe-lg-5" style="background-color: #0a3c3f; color: white; ">
 			<div class="container-fluid">
 				<a href="./index.html"><img src="./images/icons/Shankari Logo-final.png" alt="Shankari Logo" style="width: 200px; height: auto;" class="m-lg-3 m-1">
 				</a>
@@ -873,7 +873,7 @@
 
 		<!-- Footer
 		============================================= -->
-		<footer id="footer" class="border-width-1" style="background-color: #873f19">
+		<footer id="footer" class="bg-color dark border-width-1">
 			<div class="container">
 
 				<!-- Footer Widgets
