--- a/premium-nadi-pariksha.html
+++ b/premium-nadi-pariksha.html
@@ -34,6 +34,7 @@
 	<!-- Document Title
 	============================================= -->
 	<title>Shankari Ayurveda - Premium Nadi Pariksha</title>
+	<link rel="icon" type="image/x-icon" href="./images/fav-icon-shankari-ayurveda.png">
 
 </head>
 
