--- a/General nadi-parikshna.html
+++ b/General nadi-parikshna.html
@@ -34,6 +34,7 @@
 	<!-- Document Title
 	============================================= -->
 	<title>Shankari Ayurveda - General Nadi Pariksha</title>
+	<link rel="icon" type="image/x-icon" href="./images/fav-icon-shankari-ayurveda.png">
 
 </head>
 
