--- a/contactUs.html
+++ b/contactUs.html
@@ -34,6 +34,7 @@
 	<!-- Document Title
 	============================================= -->
 	<title>Shankari Ayurveda - Contact Us</title>
+	<link rel="icon" type="image/x-icon" href="./images/fav-icon-shankari-ayurveda.png">
 
 
 		<style>
