--- a/index.html
+++ b/index.html
@@ -47,8 +47,11 @@
 				 .card-body {
             				width: 90%;
 			 }
+				 .img-fluid .Treatments-image {
+					 height:10vh;
 			 }
-	 </style>
+
+	</style>
 
 </head>
 
@@ -419,7 +422,7 @@
             </a>
         </div>
         <div class="col-md-6 d-flex align-items-center justify-content-center">
-            <img src="./images/icons/General nadi.png" alt="" class="img-fluid">
+            <img src="./images/icons/General nadi.png" alt="" class="img-fluid Treatments-image">
         </div>
     </div>
     </div>
@@ -447,7 +450,7 @@
             </a>
         </div>
         <div class="col-md-6 d-flex align-items-center justify-content-center">
-            <img src="./images/icons/Premium nadi.jpg" alt="" class="img-fluid">
+            <img src="./images/icons/Premium nadi.jpg" alt="" class="img-fluid Treatments-image">
         </div>
     </div>
 </div>
@@ -471,7 +474,7 @@
                 <h1>Coming soon...</h1>
             </div>
             <div class="col-md-6" style="padding-left: 15px; padding-right: 15px;">
-                <img src="./images/icons/panchakarma-latest.jpg" alt="">
+                <img src="./images/icons/panchakarma-latest.jpg" alt="" class="img-fluid Treatments-image">
             </div>
         </div>
     </div>
