--- a/index.html
+++ b/index.html
@@ -403,29 +403,30 @@
 						<div class="tab-content px-lg-0" id="pills-tabContent">
     <div class="tab-pane fade show active" id="pills-pathologist" role="tabpanel" aria-labelledby="pills-pathologist-tab" tabindex="0">
       
-	    <div class="row justify-content-between align-items-stretch">
-    <div class="col-md-6 position-relative">
-        <img src="demos/doctors/images/icons/wave.svg" alt="..." class="position-absolute top-0 start-0 translate-middle d-none d-md-block" width="36">
-        <h2 class="display-5">General Nadi Pariksha</h2>
-        <h4 class="mb-lg-3 mb-2">Pulse Diagnosis:</h4>
-        <p>Traditional Ayurvedic method to assess health and imbalances.</p>
-        <h4 class="mb-lg-3 mb-2">Personalized Insights:</h4>
-        <p>Evaluates your unique constitution for tailored treatments.</p>
-        <h4 class="mb-lg-3 mb-2">Harmony Restoration:</h4>
-        <p>Recommends lifestyle adjustments for balance and vitality.</p>
-        <ul class="list-unstyled text-larger">
-            <!--<li class="mb-3"><i class="bi-check-circle-fill me-2 color-yellow"></i> Sensing</li>
-            <li class="mb-3"><i class="bi-check-circle-fill me-2 color-yellow"></i> Pulse</li>
-            <li class="mb-3"><i class="bi-check-circle-fill me-2 color-yellow"></i> Radical</li>-->
-        </ul>
-        <a href="./General nadi-parikshna.html">
-            <button type="button" class="button py-3 px-4 h-text-light rounded mx-0">Book an Appointment</button>
-        </a>
+	   <div class="row justify-content-between align-items-stretch">
+        <div class="col-md-5">
+            <img src="demos/doctors/images/icons/wave.svg" alt="..." class="position-absolute top-0 start-0 translate-middle d-none d-md-block" width="36">
+            <h2 class="display-5">General Nadi Pariksha</h2>
+            <h4 class="mb-lg-3 mb-2">Pulse Diagnosis:</h4>
+            <p>Traditional Ayurvedic method to assess health and imbalances.</p>
+            <h4 class="mb-lg-3 mb-2">Personalized Insights:</h4>
+            <p>Evaluates your unique constitution for tailored treatments.</p>
+            <h4 class="mb-lg-3 mb-2">Harmony Restoration:</h4>
+            <p> Recommends lifestyle adjustments for balance and vitality.</p>
+            <ul class="list-unstyled text-larger">
+                <!--<li class="mb-3"><i class="bi-check-circle-fill me-2 color-yellow"></i> Sensing</li>
+                <li class="mb-3"><i class="bi-check-circle-fill me-2 color-yellow"></i> Pulse</li>
+                <li class="mb-3"><i class="bi-check-circle-fill me-2 color-yellow"></i> Radical</li>-->
+            </ul>
+            <a href="./General nadi-parikshna.html">
+                <button type="button" class="button py-3 px-4 h-text-light rounded mx-0">Book an Appointment</button>
+            </a>
+        </div>
+		   <div class="col-md-2"></div>
+        <div class="col-md-5 d-flex align-items-center justify-content-center">
+            <img src="./images/icons/General nadi.png" alt="" class="img-fluid Treatments-image" style="70vh;">
+        </div>
     </div>
-    <div class="col-md-6 d-flex align-items-center justify-content-center">
-        <img src="./images/icons/General nadi.png" alt="" class="img-fluid Treatments-image">
-    </div>
-</div>
 
     </div>
     <div class="tab-pane fade" id="pills-orthopedic" role="tabpanel" aria-labelledby="pills-orthopedic-tab" tabindex="0">
