--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
         </div>
 		   <div class="col-md-2"></div>
         <div class="col-md-5 d-flex align-items-center justify-content-center">
-            <img src="./images/icons/General nadi.png" alt="" class="img-fluid Treatments-image" style="50vh;">
+            <img src="./images/icons/General nadi.png" alt="" class="img-fluid Treatments-image" style="height:60vh;">
         </div>
     </div>
 
