--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
         </div>
 		   <div class="col-md-2"></div>
         <div class="col-md-5 d-flex align-items-center justify-content-center">
-            <img src="./images/icons/General nadi.png" alt="" class="img-fluid Treatments-image" style="height:60vh;">
+            <img src="./images/icons/General nadi.png" alt="" class="img-fluid Treatments-image" style="height:80vh;">
         </div>
     </div>
 
@@ -434,7 +434,7 @@
 
 	    <div class="container">
     <div class="row justify-content-between align-items-stretch">
-        <div class="col-md-6">
+        <div class="col-md-5">
             <img src="demos/doctors/images/icons/wave.svg" alt="..." class="position-absolute top-0 start-0 translate-middle d-none d-md-block" width="36">
             <h2 class="display-5">Premium Nadi Pariksha</h2>
             <h4 class="mb-lg-3 mb-2">Thorough Examination:</h4>
@@ -452,15 +452,16 @@
                 <button type="button" class="button py-3 px-4 h-text-light rounded mx-0">Book an Appointment</button>
             </a>
         </div>
-        <div class="col-md-6 d-flex align-items-center justify-content-center">
-            <img src="./images/icons/Premium nadi.jpg" alt="" class="img-fluid Treatments-image">
+	    <div class="col-md-2"></div>
+        <div class="col-md-5 d-flex align-items-center justify-content-center">
+            <img src="./images/icons/Premium nadi.jpg" alt="" class="img-fluid Treatments-image" style:"height: 80vh;">
         </div>
     </div>
 </div>
     </div>
     <div class="tab-pane fade" id="pills-psychiatrist" role="tabpanel" aria-labelledby="pills-psychiatrist-tab" tabindex="0">
         <div class="row justify-content-between align-items-stretch" style="margin: 0;">
-            <div class="col-md-6" style="padding-left: 15px; padding-right: 15px;">
+            <div class="col-md-5" style="padding-left: 15px; padding-right: 15px;">
                 <img src="demos/doctors/images/icons/wave.svg" alt="..." class="position-absolute top-0 start-0 translate-middle d-none d-md-block" width="36">
                 <h2 class="display-5">Panchakarma Treatments</h2>
                 <h4 class="mb-lg-3 mb-2">Detoxification:</h4>
@@ -476,8 +477,9 @@
                 </ul>-->
                 <h1>Coming soon...</h1>
             </div>
-            <div class="col-md-6" style="padding-left: 15px; padding-right: 15px;">
-                <img src="./images/icons/panchakarma-latest.jpg" alt="" class="img-fluid Treatments-image">
+		<div class="col-md-2"></div>
+            <div class="col-md-5" style="padding-left: 15px; padding-right: 15px;">
+                <img src="./images/icons/panchakarma-latest.jpg" alt="" class="img-fluid Treatments-image" style: "height: 80vh;">
             </div>
         </div>
     </div>
