--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
         </div>
 		   <div class="col-md-2"></div>
         <div class="col-md-5 d-flex align-items-center justify-content-center">
-            <img src="./images/icons/General nadi.png" alt="" class="img-fluid Treatments-image" style="height:80vh;">
+            <img src="./images/icons/General nadi.png" alt="" class="img-fluid Treatments-image" style="height:75vh;">
         </div>
     </div>
 
@@ -454,7 +454,7 @@
         </div>
 	    <div class="col-md-2"></div>
         <div class="col-md-5 d-flex align-items-center justify-content-center">
-            <img src="./images/icons/Premium nadi.jpg" alt="" class="img-fluid Treatments-image" style:"height: 80vh;">
+            <img src="./images/icons/Premium nadi.jpg" alt="" class="img-fluid Treatments-image" style="height:75vh;">
         </div>
     </div>
 </div>
@@ -479,7 +479,7 @@
             </div>
 		<div class="col-md-2"></div>
             <div class="col-md-5" style="padding-left: 15px; padding-right: 15px;">
-                <img src="./images/icons/panchakarma-latest.jpg" alt="" class="img-fluid Treatments-image" style: "height: 80vh;">
+                <img src="./images/icons/panchakarma-latest.jpg" alt="" class="img-fluid Treatments-image" style="height:75vh;">
             </div>
         </div>
     </div>
