--- a/index.html
+++ b/index.html
@@ -34,9 +34,13 @@
 	<link rel="icon" type="image/x-icon" href="./images/fav-icon-shankari-ayurveda.png">
 	 <style>
 		 @media screen and(min-width: 360px) {
-			 .card-body {
-				min-height: 300px;
+			 .card-bo {
+				min-height: 300px;-->
 			 }
+			 	 .img-fluid.Treatments-image {
+					 height: 40vh;
+			 }
+		 }
 				 
 			  @media (min-width: 768px) {
        				 .card-body {
@@ -48,7 +52,7 @@
             				width: 90%;
 			 }
 				 .img-fluid.Treatments-image {
-					 height: 20vh;
+					 height: 40vh;
 			 }
 			 }
 
