--- a/index.html
+++ b/index.html
@@ -46,15 +46,16 @@
        				 .card-body {
             				width: 90%;
       				  }
-    			}
+			  }
 			 @media screen and (max-width: 360px) {
 				 .card-body {
             				width: 90%;
 			 }
 				 .img-fluid.Treatments-image {
-					 height: 40vh;
+					 height: 40vh !important;
 			 }
 			 }
+		 
 
 	</style>
 
