--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
             				width: 90%;
 			 }
 				 .img-fluid.Treatments-image {
-					 height: 40vh !important;
+					 height: 60vh !important;
+					 width: auto;
 			 }
 			 }
 		 
