--- a/index.html
+++ b/index.html
@@ -486,7 +486,8 @@
             </div>
 		<div class="col-md-2"></div>
             <div class="col-md-5" style="padding-left: 15px; padding-right: 15px;">
-                <img src="./images/icons/panchakarma-latest.jpg" alt="" class="img-fluid Treatments-image" style="height:80vh;">
+          <!--      <img src="./images/icons/panchakarma-latest.jpg" alt="" class="img-fluid Treatments-image" style="height:80vh;"> -->
+		    <img src=".images/icons/Panchakarma-img-updated.jpg">
             </div>
         </div>
     </div>
