--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
 		<div class="col-md-2"></div>
             <div class="col-md-5" style="padding-left: 15px; padding-right: 15px;">
           <!--      <img src="./images/icons/panchakarma-latest.jpg" alt="" class="img-fluid Treatments-image" style="height:80vh;"> -->
-		    <img src="./images/icons/Panchakarma-img-final-1.png" alt="img">
+		    <img src="./images/icons/panchakarma-1.1.png" alt="img">
             </div>
         </div>
     </div>
