--- a/index.html
+++ b/index.html
@@ -461,7 +461,8 @@
         </div>
 	    <div class="col-md-2"></div>
         <div class="col-md-5 d-flex align-items-center justify-content-center">
-            <img src="./images/icons/Premium nadi.jpg" alt="" class="img-fluid Treatments-image" style="height:80vh;">
+            <!-- <img src="./images/icons/Premium nadi.jpg" alt="" class="img-fluid Treatments-image" style="height:80vh;"> -->
+		<img src="./images/icons/general-nadi-img.png">
         </div>
     </div>
 </div>
