--- a/index.html
+++ b/index.html
@@ -70,7 +70,6 @@
 	============================================= -->
 	<div id="wrapper">
 
-
 		<!-- <header id="header" class="header-size-md dark transparent-header floating-header" data-sticky-shrink="false" data-responsive-class="not-dark">
 			<div id="header-wrap" class="border-0">
 				<div class="container rounded">
@@ -431,7 +430,8 @@
         </div>
 		   <div class="col-md-2"></div>
         <div class="col-md-5 d-flex align-items-center justify-content-center">
-            <img src="./images/icons/General nadi.png" alt="" class="img-fluid Treatments-image" style="height:80vh;">
+           <!-- <img src="./images/icons/General nadi.png" alt="" class="img-fluid Treatments-image" style="height:80vh;"> -->
+		<img src=".//images/icons/general-nadi-img.png">
         </div>
     </div>
 
@@ -462,7 +462,7 @@
 	    <div class="col-md-2"></div>
         <div class="col-md-5 d-flex align-items-center justify-content-center">
             <!-- <img src="./images/icons/Premium nadi.jpg" alt="" class="img-fluid Treatments-image" style="height:80vh;"> -->
-		<img src="./images/icons/general-nadi-img.png">
+		<img src="./images/icons/premium-img-1.1.png">
         </div>
     </div>
 </div>
@@ -488,7 +488,7 @@
 		<div class="col-md-2"></div>
             <div class="col-md-5" style="padding-left: 15px; padding-right: 15px;">
           <!--      <img src="./images/icons/panchakarma-latest.jpg" alt="" class="img-fluid Treatments-image" style="height:80vh;"> -->
-		    <img src="./images/icons/panchakarma-1.1.png" alt="img">
+		    <img src="./images/icons/panchakarma-img-1.1" alt="img">
             </div>
         </div>
     </div>
