--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
             </a>
         </div>
 	    <div class="col-md-2"></div>
-        <div class="col-md-5 d-flex align-items-center justify-content-center">
+        <div class="col-md-5 d-flex align-items-center justify-content-center m-0">
             <!-- <img src="./images/icons/Premium nadi.jpg" alt="" class="img-fluid Treatments-image" style="height:80vh;"> -->
 		<img src="./images/icons/premium-img-1.1.png">
         </div>
@@ -486,7 +486,7 @@
                 <h1>Coming soon...</h1>
             </div>
 		<div class="col-md-2"></div>
-            <div class="col-md-5" style="padding-left: 15px; padding-right: 15px;">
+            <div class="col-md-5 d-flex align-items-center justify-content-center m-0">
           <!--      <img src="./images/icons/panchakarma-latest.jpg" alt="" class="img-fluid Treatments-image" style="height:80vh;"> -->
 		    <img src="./images/icons/panchakarma-img-1.1.png" alt="img">
             </div>
