--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
     <div class="tab-pane fade show active" id="pills-pathologist" role="tabpanel" aria-labelledby="pills-pathologist-tab" tabindex="0">
       
 	   <div class="row justify-content-between align-items-stretch">
-        <div class="col-md-5">
+        <div class="col-md-5 ms-lg-0 ms-3">
             <img src="demos/doctors/images/icons/wave.svg" alt="..." class="position-absolute top-0 start-0 translate-middle d-none d-md-block" width="36">
             <h2 class="display-5">General Nadi Pariksha</h2>
             <h4 class="mb-lg-3 mb-2">Pulse Diagnosis:</h4>
