--- a/contactUs.html
+++ b/contactUs.html
@@ -3,6 +3,7 @@
 <head>
 
 	<meta http-equiv="content-type" content="text/html; charset=utf-8">
+	 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="x-ua-compatible" content="IE=edge">
 	<meta name="author" content="SemiColonWeb">
 	<meta name="description" content="Get Canvas to build powerful websites easily with the Highly Customizable &amp; Best Selling Bootstrap Template, today.">
