premium-nadi-pariksha.html

--- a/premium-nadi-pariksha.html
+++ b/premium-nadi-pariksha.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html dir="ltr" lang="en-US">
 <head>
@@ -31,23 +32,19 @@
 
 	<link rel="stylesheet" href="Google Sheet.css">
 
-	<!-- Document Title
-	============================================= -->
+	<!-- Document Title -->
 	<title>Shankari Ayurveda - Premium Nadi Pariksha</title>
 	<link rel="icon" type="image/x-icon" href="./images/fav-icon-shankari-ayurveda.png">
 
 </head>
 
-<!-- stretched (body)
-============================================= -->
+<!-- stretched (body)-->
 <body class="stretched">
 
-	<!-- Document Wrapper
-	============================================= -->
+	<!-- Document Wrapper -->
 	<div id="wrapper">
 
-		<!-- Header
-		============================================= -->
+		<!-- Header -->
 		<nav class="navbar navbar-expand-lg fixed-top ps-lg-5 pe-lg-5" style="background-color: #0a3c3f; color: white; ">
 			<div class="container-fluid">
 				<a href="./index.html"><img src="./images/icons/Shankari_Logo-2.png" alt="Shankari Logo" style="width: 200px; height: auto;" class="m-lg-3 m-1">
@@ -60,9 +57,6 @@
 				  <li class="nav-item">
 					<a class="nav-link text-white pe-lg-3" aria-current="page" href="./index.html">Home</a>
 				  </li>
-				  <!-- <li class="nav-item">
-					<a class="nav-link text-white" href="./doctor.html">Doctor</a>
-				  </li> -->
 				  <li class="nav-item dropdown">
 					<a class="nav-link dropdown-toggle text-white pe-lg-3" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
 					  Treatments
@@ -70,7 +64,6 @@
 					<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 					  <li><a class="dropdown-item" href="./General nadi-parikshna.html">Nadi Pariksha</a></li>
 					  <li><a class="dropdown-item  active" href="./premium-nadi-pariksha.html">Premium Nadi Pariksha</a></li>
-<!-- 					  <li><a class="dropdown-item" href="./panchakarma.html">Panchakarma</a></li> -->
 					</ul>
 				  </li>
 				  <li class="nav-item">
@@ -80,18 +73,15 @@
 			  </div>
 			</div>
 		  </nav>
-		<!-- Hero
-		============================================= -->
+		<!-- Hero-->
 
         <iframe width='100%' height='750px' style="margin-top: 120px;" src='https://santosh-nairiti.zohobookings.in/portal-embed#/nadiparikshapremium' frameborder='0' allowfullscreen='' > </iframe>
 
-		<!-- Footer
-		============================================= -->
+		<!-- Footer -->
 		<footer id="footer" class="bg-color dark border-width-1">
 			<div class="container">
 
-				<!-- Footer Widgets
-				============================================= -->
+				<!-- Footer Widgets -->
 				<div class="footer-widgets-wrap">
 					<div class="row gx-4 gy-5">
 						<div class="col-lg-8 col-6 d-flex justify-content-center">
@@ -126,8 +116,7 @@
 				</div><!-- .footer-widgets-wrap end -->
 			</div>
 
-			<!-- Copyrights
-			============================================= -->
+			<!-- Copyrights-->
 			<div id="copyrights" class="bg-transparent border-top op-08">
 				<div class="container">
 
@@ -142,8 +131,7 @@
 		</footer><!-- #footer end -->
 	</div><!-- #wrapper end -->
 
-	<!-- JavaScripts
-	============================================= -->
+	<!-- JavaScripts -->
 	<script src="js/plugins.min.js"></script>
 	<script src="js/functions.bundle.js"></script>
 
