--- a/index.html
+++ b/index.html
@@ -119,8 +119,11 @@
 								  <img src="./images/hero/hero-image.jpg" class="object-cover rounded-6">
 							</div>
 							<div class="col-6">
-								<img src="https://t4.ftcdn.net/jpg/05/90/17/23/360_F_590172388_eEZ8vGqNqAtYSNP7LcRTMyl0db5kemNX.jpg" alt="Image" class="object-cover rounded-6 mb-4">
-								<img src="https://economictimes.indiatimes.com/thumb/msid-95993667,width-1200,height-900,resizemode-4,imgsize-137592/ayurveda-and-sexual-health.jpg?from=mdr" alt="Image" class="object-cover rounded-6">
+								<!-- <img src="https://t4.ftcdn.net/jpg/05/90/17/23/360_F_590172388_eEZ8vGqNqAtYSNP7LcRTMyl0db5kemNX.jpg" alt="Image" class="object-cover rounded-6 mb-4"> -->
+								<img src="./images/hero/hero-image-1.jpg" class="object-cover rounded-6 mb-4">
+								
+								<!-- <img src="https://economictimes.indiatimes.com/thumb/msid-95993667,width-1200,height-900,resizemode-4,imgsize-137592/ayurveda-and-sexual-health.jpg?from=mdr" alt="Image" class="object-cover rounded-6"> -->
+								<img src="./images/hero/hero-img-3.jpg" class="object-cover rounded-6">
 							</div>
 						</div>
 						<img src="demos/doctors/images/icons/capsule.svg" alt=".." class="position-absolute z-1 top-0 mt-3 op-01" width="70" style="left: -90px;">
