--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@
 						<p>Welcome to <strong> Shankari Ayurveda Chikitsalayam</strong>, where ancient wisdom meets modern healing. Our clinic, led by<br><strong> Dr. Sruthy P.R,</strong> offers a range of authentic Ayurvedic treatments designed to restore balance and promote holistic wellness. Discover the power of Ayurveda with personalized care and natural therapies.</p>
 						<a href="#target-id-treatmenets" class="button py-3 px-4 h-text-light rounded mx-0">Book an Appoinment<i class="bi-arrow-right ms-2 me-0"></i></a>
 					</div>
-					<div class="col-lg-6">
+					<div class="d-lg-block d-none">
+						<div class="col-lg-6">
 						<!-- Gallery -->
 						<div class="row align-items-center g-4">
 							<div class="col-6">
@@ -127,6 +128,7 @@
 							</div>
 						</div>
 						<img src="demos/doctors/images/icons/capsule.svg" alt=".." class="position-absolute z-1 top-0 mt-3 op-01" width="70" style="left: -90px;">
+					</div>
 					</div>
 				</div>
 			</div>
