--- a/index.html
+++ b/index.html
@@ -111,15 +111,16 @@
 						<p>Welcome to <strong> Shankari Ayurveda Chikitsalayam</strong>, where ancient wisdom meets modern healing. Our clinic, led by<br><strong> Dr. Sruthy P.R,</strong> offers a range of authentic Ayurvedic treatments designed to restore balance and promote holistic wellness. Discover the power of Ayurveda with personalized care and natural therapies.</p>
 						<a href="#target-id-treatmenets" class="button py-3 px-4 h-text-light rounded mx-0">Book an Appoinment<i class="bi-arrow-right ms-2 me-0"></i></a>
 					</div>
-					<div class="d-lg-block d-none">
+					
 						<div class="col-lg-6">
 						<!-- Gallery -->
 						<div class="row align-items-center g-4">
-							<div class="col-6">
+							<!-- <div class="d-lg-block d-none"> -->
+							<div class="col-6 d-none d-lg-block">
 								<!-- <img src="https://static.wixstatic.com/media/ba45f1_c2ee10d91f1b4e4a93b4c64c1ef660ca~mv2.png/v1/fill/w_560,h_438,al_c,q_85,usm_0.33_1.00_0.00,enc_auto/Nadi%20Pariksha%20image.png" alt="Image" class="object-cover rounded-6"> -->
 								  <img src="./images/hero/hero-image.jpg" class="object-cover rounded-6">
 							</div>
-							<div class="col-6">
+							<div class="col-6 d-none d-lg-block">
 								<!-- <img src="https://t4.ftcdn.net/jpg/05/90/17/23/360_F_590172388_eEZ8vGqNqAtYSNP7LcRTMyl0db5kemNX.jpg" alt="Image" class="object-cover rounded-6 mb-4"> -->
 								<img src="./images/hero/hero-image-2.jpg" class="object-cover rounded-6 mb-4">
 								
