--- a/index.html
+++ b/index.html
@@ -116,9 +116,8 @@
 						<!-- Gallery -->
 						<div class="row align-items-center g-4">
 							<!-- <div class="d-lg-block d-none"> -->
-							<div class="col-6 d-none d-lg-block">
-								<!-- <img src="https://static.wixstatic.com/media/ba45f1_c2ee10d91f1b4e4a93b4c64c1ef660ca~mv2.png/v1/fill/w_560,h_438,al_c,q_85,usm_0.33_1.00_0.00,enc_auto/Nadi%20Pariksha%20image.png" alt="Image" class="object-cover rounded-6"> -->
-								  <img src="./images/hero/hero-image.jpg" class="object-cover rounded-6">
+							<div class="col-6 d-none d-lg-block" style:"background-image: url('./images/hero/hero-image.jpg'); background-size: cover; background-position: center; border-radius: 6px; width: 100%; height: 100%; ">
+								<!-- <img src="./images/hero/hero-image.jpg" class="object-cover rounded-6">	-->
 							</div>
 							<div class="col-6 d-none d-lg-block">
 								<!-- <img src="https://t4.ftcdn.net/jpg/05/90/17/23/360_F_590172388_eEZ8vGqNqAtYSNP7LcRTMyl0db5kemNX.jpg" alt="Image" class="object-cover rounded-6 mb-4"> -->
