--- a/index.html
+++ b/index.html
@@ -116,9 +116,11 @@
 						<!-- Gallery -->
 						<div class="row align-items-center g-4">
 							<!-- <div class="d-lg-block d-none"> -->
-							<div class="col-6 d-none d-lg-block" style:"background-image: url('./images/hero/hero-image.jpg'); background-size: cover; background-position: center; border-radius: 6px; width: 100%; height: 100%; ">
-								<!-- <img src="./images/hero/hero-image.jpg" class="object-cover rounded-6">	-->
+							<!-- <div class="col-6 d-none d-lg-block" style:"background-image: url('./images/hero/hero-image.jpg'); background-size: cover; background-position: center; border-radius: 6px; width: 100%; height: 100%; ">
+							</div> -->
+							<div class="col-6 d-none d-lg-block" style="background-image: url('./images/hero/hero-image.jpg'); background-size: cover; background-position: center; border-radius: 6px; width: 100%; height: 100%;">
 							</div>
+
 							<div class="col-6 d-none d-lg-block">
 								<!-- <img src="https://t4.ftcdn.net/jpg/05/90/17/23/360_F_590172388_eEZ8vGqNqAtYSNP7LcRTMyl0db5kemNX.jpg" alt="Image" class="object-cover rounded-6 mb-4"> -->
 								<img src="./images/hero/hero-image-2.jpg" class="object-cover rounded-6 mb-4">
