--- a/index.html
+++ b/index.html
@@ -118,8 +118,9 @@
 							<!-- <div class="d-lg-block d-none"> -->
 							<!-- <div class="col-6 d-none d-lg-block" style:"background-image: url('./images/hero/hero-image.jpg'); background-size: cover; background-position: center; border-radius: 6px; width: 100%; height: 100%; ">
 							</div> -->
-							<div class="col-6 d-none d-lg-block" style="background-image: url('./images/hero/hero-image.jpg'); background-size: cover; background-position: center; border-radius: 6px; width: 100%; height: 100%;">
+							<div class="col-6 d-none d-lg-block" style="background-image: url('./images/hero/hero-image.jpg'); background-size: cover; background-position: center; border-radius: 6px; width: 100%; height: 300px;">
 							</div>
+
 
 							<div class="col-6 d-none d-lg-block">
 								<!-- <img src="https://t4.ftcdn.net/jpg/05/90/17/23/360_F_590172388_eEZ8vGqNqAtYSNP7LcRTMyl0db5kemNX.jpg" alt="Image" class="object-cover rounded-6 mb-4"> -->
