--- a/index.html
+++ b/index.html
@@ -118,17 +118,15 @@
 							<!-- <div class="d-lg-block d-none"> -->
 							<!-- <div class="col-6 d-none d-lg-block" style:"background-image: url('./images/hero/hero-image.jpg'); background-size: cover; background-position: center; border-radius: 6px; width: 100%; height: 100%; ">
 							</div> -->
-							<div class="col-6 d-none d-lg-block" style="background-image: url('./images/hero/hero-image.jpg'); background-size: cover; background-position: center; border-radius: 6px; width: 100%; height: 300px;">
+							<div class="col-6 d-none d-lg-block" style="background-image: url('./images/hero/hero-image.jpg'); background-size: cover; background-position: center; border-radius: 6px; width: 50%; height: 180px;">
 							</div>
 
 
-							<div class="col-6 d-none d-lg-block">
-								<!-- <img src="https://t4.ftcdn.net/jpg/05/90/17/23/360_F_590172388_eEZ8vGqNqAtYSNP7LcRTMyl0db5kemNX.jpg" alt="Image" class="object-cover rounded-6 mb-4"> -->
-								<img src="./images/hero/hero-image-2.jpg" class="object-cover rounded-6 mb-4">
-								
-								<!-- <img src="https://economictimes.indiatimes.com/thumb/msid-95993667,width-1200,height-900,resizemode-4,imgsize-137592/ayurveda-and-sexual-health.jpg?from=mdr" alt="Image" class="object-cover rounded-6"> -->
-								<img src="./images/hero/hero-img-3.jpg" class="object-cover rounded-6">
+							<div class="col-6 d-none d-lg-block" style="display: flex; flex-direction: column; gap: 16px;">
+   								 <div style="background-image: url('./images/hero/hero-image-2.jpg'); background-size: cover; background-position: center; border-radius: 6px; width: 50%; height: 140px;"></div>
+   								 <div style="background-image: url('./images/hero/hero-img-3.jpg'); background-size: cover; background-position: center; border-radius: 6px; width: 100%; height: 140px;"></div>
 							</div>
+
 						</div>
 						<img src="demos/doctors/images/icons/capsule.svg" alt=".." class="position-absolute z-1 top-0 mt-3 op-01" width="70" style="left: -90px;">
 					</div>
