--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
 
 							<div class="col-6 d-none d-lg-block" style="display: flex; flex-direction: column; gap: 16px;">
-   								 <div style="background-image: url('./images/hero/hero-image-2.jpg'); background-size: cover; background-position: center; border-radius: 6px; width: 50%; height: 140px;"></div>
+   								 <div style="background-image: url('./images/hero/hero-image-2.jpg'); background-size: cover; background-position: center; border-radius: 6px; width: 100%; height: 140px; margin-bottom: 10px;"></div>
    								 <div style="background-image: url('./images/hero/hero-img-3.jpg'); background-size: cover; background-position: center; border-radius: 6px; width: 100%; height: 140px;"></div>
 							</div>
 
