--- a/index.html
+++ b/index.html
@@ -196,9 +196,9 @@
             </a>
         </div>
 		   <div class="col-md-2"></div>
-        <div class="col-md-5 d-flex align-items-center justify-content-center">
-		<img src=".//images/icons/general-nadi-img.png">
-        </div>
+        <div class="col-md-5 d-flex align-items-center justify-content-center" style="background-image: url('./images/icons/general-nadi-img.png'); background-size: cover; background-position: center; border-radius: 6px;">
+	</div>
+
     </div>
 
     </div>
