--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
 				
 
-				<div class="section bg-transparent mt-lg-0 mb-lg-0 pb-lg-0">
+				<div class="section bg-transparent mt-lg-5 mb-lg-0 pb-lg-0 pt-4 mt-5">
 					<div class="container">
 						<div class="col-md-12 align-items-center justify-content-center text-center">
 							<h2 class="display-4 mb-3">Our Specialized Offerings</h2>
