--- a/doctor.html
+++ b/doctor.html
@@ -13,19 +13,19 @@
 	<link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,300;9..40,400;9..40,500;9..40,600;9..40,700&family=Rubik:wght@400;500;600;700&display=swap" rel="stylesheet">
 
 	<!-- Core Style -->
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="min/css/style.css">
 
 	<!-- Font Icons -->
 	<link rel="stylesheet" href="css/font-icons.css">
 
 	<!-- Plugins/Components CSS -->
-	<link rel="stylesheet" href="css/components/bs-select.css">
+	<link rel="stylesheet" href="min/css/bs-select.css">
 
 	<!-- Niche Demos -->
-	<link rel="stylesheet" href="demos/doctors/doctors.css">
+	<link rel="stylesheet" href="min/css/doctors.css">
 
 	<!-- Custom CSS -->
-	<link rel="stylesheet" href="css/custom.css">
+	<link rel="stylesheet" href="min/css/custom.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<!-- Document Title
