--- a/premium-nadi-pariksha.html
+++ b/premium-nadi-pariksha.html
@@ -15,19 +15,19 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 	<!-- Core Style -->
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="min/css/style.css">
 
 	<!-- Font Icons -->
 	<link rel="stylesheet" href="css/font-icons.css">
 
 	<!-- Plugins/Components CSS -->
-	<link rel="stylesheet" href="css/components/bs-select.css">
+	<link rel="stylesheet" href="min/css/bs-select.css">
 
 	<!-- Niche Demos -->
-	<link rel="stylesheet" href="demos/doctors/doctors.css">
+	<link rel="stylesheet" href="min/css/doctors.css">
 
 	<!-- Custom CSS -->
-	<link rel="stylesheet" href="css/custom.css">
+	<link rel="stylesheet" href="min/css/custom.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<link rel="stylesheet" href="Google Sheet.css">
