--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 				  <li class="nav-item">
 					<a class="nav-link active text-white pe-lg-3" aria-current="page" href="./index.html">Home</a>
 				  </li>
-				  <li class="nav-item dropdown">
+<!-- 				  <li class="nav-item dropdown">
 					<a class="nav-link dropdown-toggle text-white pe-lg-3" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
 					  Treatments
 					</a>
@@ -94,7 +94,7 @@
 					  <li><a class="dropdown-item" href="./General nadi-parikshna.html">Nadi Pariksha</a></li>
 					  <li><a class="dropdown-item" href="./premium-nadi-pariksha.html">Premium Nadi Pariksha</a></li>
 					</ul>
-				  </li>
+				  </li> -->
 				  <li class="nav-item">
 					<a class="nav-link text-white" href="./contactUs.html">Contact</a>
 				  </li>
@@ -193,9 +193,7 @@
             <p>Evaluates your unique constitution for tailored treatments.</p>
             <h4 class="mb-lg-3 mb-2">Harmony Restoration:</h4>
             <p> Recommends lifestyle adjustments for balance and vitality.</p>
-            <a href="./General nadi-parikshna.html">
-                <button type="button" class="button py-3 px-4 h-text-light rounded mx-0">Book an Appointment</button>
-            </a>
+            <h1>Coming soon...</h1>
         </div>
 		   <div class="col-md-2"></div>
 
@@ -220,9 +218,7 @@
             <p>Combines yoga, dietary advice, and lifestyle counseling.</p>
             <h4 class="mb-lg-3 mb-2">Holistic Health:</h4>
             <p>Provides a deeper, holistic wellness path.</p>
-            <a href="./premium-nadi-pariksha.html">
-                <button type="button" class="button py-3 px-4 h-text-light rounded mx-0">Book an Appointment</button>
-            </a>
+            <h1>Coming soon...</h1>
         </div>
 	    <div class="col-md-2"></div>
         <div class="col-md-5 d-flex align-items-center justify-content-center m-0">
