--- a/contactUs.html
+++ b/contactUs.html
@@ -72,7 +72,7 @@
 				  <li class="nav-item">
 					<a class="nav-link text-white pe-lg-3" aria-current="page" href="./index.html">Home</a>
 				  </li>
-				  <li class="nav-item dropdown">
+				  <!-- <li class="nav-item dropdown">
 					<a class="nav-link dropdown-toggle text-white pe-lg-3" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
 					  Treatments
 					</a>
@@ -80,7 +80,7 @@
 					  <li><a class="dropdown-item" href="./General nadi-parikshna.html">Nadi Pariksha</a></li>
 					  <li><a class="dropdown-item" href="./premium-nadi-pariksha.html">Premium Nadi Pariksha</a></li>
 					</ul>
-				  </li>
+				  </li> -->
 				  <li class="nav-item">
 					<a class="nav-link active text-white" href="./contactUs.html">Contact</a>
 				  </li>
