--- a/index.html
+++ b/index.html
@@ -283,7 +283,8 @@
 <div class="carousel-item active">
     <div class="card text-center">
         <div class="text-center">
-            <img src="https://hounslowpassportphotoshop.co.uk/images/blankimg.png" class="card-img-top mt-lg-5" alt="..." style="height: 90px; width: 90px;">
+            <img src="./images/blankimg-1.png" class="card-img-top mt-lg-5" alt="..." style="height: 80px; width: 80px;">
+			<!-- <img src="https://hounslowpassportphotoshop.co.uk/images/blankimg.png" class="card-img-top mt-lg-5" alt="..." style="height: 90px; width: 90px;"> -->
         </div>
         <div class="card-body" style="height: 250px; width: 80%; margin: 0 auto;">
             <h4 class="mb-0">Ramya Errabelli</h4>
@@ -297,7 +298,8 @@
 	<div class="carousel-item">
     <div class="card text-center">
         <div class="text-center">
-            <img src="https://hounslowpassportphotoshop.co.uk/images/blankimg.png" class="card-img-top mt-lg-5" alt="..." style="height: 90px; width: 90px;">
+			<img src="./images/blankimg-1.png" class="card-img-top mt-lg-5" alt="..." style="height: 80px; width: 80px;">
+            <!-- <img src="https://hounslowpassportphotoshop.co.uk/images/blankimg.png" class="card-img-top mt-lg-5" alt="..." style="height: 90px; width: 90px;"> -->
         </div>
         <div class="card-body" style="height: 250px; width: 80%; margin: 0 auto;">
             <h4 class="mb-0">Vamsi Krish</h4>
@@ -309,7 +311,8 @@
 		<div class="carousel-item">
     <div class="card text-center">
         <div class="text-center">
-            <img src="https://hounslowpassportphotoshop.co.uk/images/blankimg.png" class="card-img-top mt-lg-5" alt="..." style="height: 90px; width: 90px;">
+			<img src="./images/blankimg-1.png" class="card-img-top mt-lg-5" alt="..." style="height: 80px; width: 80px;">
+            <!-- <img src="https://hounslowpassportphotoshop.co.uk/images/blankimg.png" class="card-img-top mt-lg-5" alt="..." style="height: 90px; width: 90px;"> -->
         </div>
         <div class="card-body" style="height: 250px; width: 80%; margin: 0 auto;">
             <h4 class="mb-0">Pooja Sonthalia</h4>
@@ -321,7 +324,8 @@
 							<div class="carousel-item">
     <div class="card text-center">
         <div class="text-center">
-            <img src="https://hounslowpassportphotoshop.co.uk/images/blankimg.png" class="card-img-top mt-lg-5" alt="..." style="height: 90px; width: 90px;">
+			<img src="./images/blankimg-1.png" class="card-img-top mt-lg-5" alt="..." style="height: 80px; width: 80px;">
+            <!-- <img src="https://hounslowpassportphotoshop.co.uk/images/blankimg.png" class="card-img-top mt-lg-5" alt="..." style="height: 90px; width: 90px;"> -->
         </div>
         <div class="card-body" style="height: 250px; width: 80%; margin: 0 auto;">
             <h4 class="mb-0">VenkataSubbarao Paruchuri</h4>
@@ -333,7 +337,8 @@
 						  <div class="carousel-item">
     <div class="card text-center">
         <div class="text-center">
-            <img src="https://hounslowpassportphotoshop.co.uk/images/blankimg.png" class="card-img-top mt-lg-5" alt="..." style="height: 90px; width: 90px;">
+			<img src="./images/blankimg-1.png" class="card-img-top mt-lg-5" alt="..." style="height: 80px; width: 80px;">
+            <!-- <img src="https://hounslowpassportphotoshop.co.uk/images/blankimg.png" class="card-img-top mt-lg-5" alt="..." style="height: 90px; width: 90px;"> -->
         </div>
         <div class="card-body" style="height: 250px; width: 80%; margin: 0 auto;">
             <h4 class="mb-0">Dabbiru Vidyavathi</h4>
@@ -345,7 +350,8 @@
 						  <div class="carousel-item">
     <div class="card text-center">
         <div class="text-center">
-            <img src="https://hounslowpassportphotoshop.co.uk/images/blankimg.png" class="card-img-top mt-lg-5" alt="..." style="height: 90px; width: 90px;">
+			<img src="./images/blankimg-1.png" class="card-img-top mt-lg-5" alt="..." style="height: 80px; width: 80px;">
+            <!-- <img src="https://hounslowpassportphotoshop.co.uk/images/blankimg.png" class="card-img-top mt-lg-5" alt="..." style="height: 90px; width: 90px;"> -->
         </div>
         <div class="card-body" style="height: 250px; width: 80%; margin: 0 auto;">
             <h4 class="mb-0">Hemanth G</h4>
@@ -357,7 +363,8 @@
 						  <div class="carousel-item">
     <div class="card text-center">
         <div class="text-center">
-            <img src="https://hounslowpassportphotoshop.co.uk/images/blankimg.png" class="card-img-top mt-lg-5" alt="..." style="height: 90px; width: 90px;">
+			<img src="./images/blankimg-1.png" class="card-img-top mt-lg-5" alt="..." style="height: 80px; width: 80px;">
+            <!-- <img src="https://hounslowpassportphotoshop.co.uk/images/blankimg.png" class="card-img-top mt-lg-5" alt="..." style="height: 90px; width: 90px;"> -->
         </div>
         <div class="card-body" style="height: 250px; width: 80%; margin: 0 auto;">
             <h4 class="mb-0">Yarram Sudhir kumar Reddy</h4>
@@ -370,7 +377,8 @@
 						 <div class="carousel-item">
     <div class="card text-center">
         <div class="text-center">
-            <img src="https://hounslowpassportphotoshop.co.uk/images/blankimg.png" class="card-img-top mt-lg-5" alt="..." style="height: 90px; width: 90px;">
+			<img src="./images/blankimg-1.png" class="card-img-top mt-lg-5" alt="..." style="height: 80px; width: 80px;">
+            <!-- <img src="https://hounslowpassportphotoshop.co.uk/images/blankimg.png" class="card-img-top mt-lg-5" alt="..." style="height: 90px; width: 90px;"> -->
         </div>
         <div class="card-body" style="height: 250px; width: 80%; margin: 0 auto;">
             <h4 class="mb-0">Sailaja Anand</h4>
@@ -383,7 +391,8 @@
 						  <div class="carousel-item">
     <div class="card text-center">
         <div class="text-center">
-            <img src="https://hounslowpassportphotoshop.co.uk/images/blankimg.png" class="card-img-top mt-lg-5" alt="..." style="height: 90px; width: 90px;">
+			<img src="./images/blankimg-1.png" class="card-img-top mt-lg-5" alt="..." style="height: 80px; width: 80px;">
+            <!-- <img src="https://hounslowpassportphotoshop.co.uk/images/blankimg.png" class="card-img-top mt-lg-5" alt="..." style="height: 90px; width: 90px;"> -->
         </div>
         <div class="card-body" style="height: 250px; width: 80%; margin: 0 auto;">
             <h4 class="mb-0">Chitra Balu</h4>
@@ -396,7 +405,8 @@
 						 <div class="carousel-item">
     <div class="card text-center">
         <div class="text-center">
-            <img src="https://hounslowpassportphotoshop.co.uk/images/blankimg.png" class="card-img-top mt-lg-5" alt="..." style="height: 90px; width: 90px;">
+			<img src="./images/blankimg-1.png" class="card-img-top mt-lg-5" alt="..." style="height: 80px; width: 80px;">
+            <!-- <img src="https://hounslowpassportphotoshop.co.uk/images/blankimg.png" class="card-img-top mt-lg-5" alt="..." style="height: 90px; width: 90px;"> -->
         </div>
         <div class="card-body" style="height: 250px; width: 80%; margin: 0 auto;">
             <h4 class="mb-0">Manikya Lakshmi</h4>
@@ -409,7 +419,8 @@
 						 <div class="carousel-item">
     <div class="card text-center">
         <div class="text-center">
-            <img src="https://hounslowpassportphotoshop.co.uk/images/blankimg.png" class="card-img-top mt-lg-5" alt="..." style="height: 90px; width: 90px;">
+			<img src="./images/blankimg-1.png" class="card-img-top mt-lg-5" alt="..." style="height: 80px; width: 80px;">
+            <!-- <img src="https://hounslowpassportphotoshop.co.uk/images/blankimg.png" class="card-img-top mt-lg-5" alt="..." style="height: 90px; width: 90px;"> -->
         </div>
         <div class="card-body" style="height: 250px; width: 80%; margin: 0 auto;">
             <h4 class="mb-0">Hemanth Kotra</h4>
