--- a/index.html
+++ b/index.html
@@ -452,13 +452,13 @@
 								<h4 class="text-uppercase mb-4">Need Help?</h4>
 								<ul class="list-unstyled">
 									<li class="mb-3">
-										<a href="tel:+91 9908157287" class="d-flex">
-											<i class="me-3 bi-telephone-fill"></i>+91 9908157287
+										<a href="tel:+91 8919603936" class="d-flex">
+											<i class="me-3 bi-telephone-fill"></i>+91 8919603936
 										</a>
 									</li>
 									<li class="mb-3">
-										<a href="mailto:shankariayurveda@shankariayur.com" class="d-flex">
-											<i class="me-3 bi-envelope-fill"></i>shankariayurveda@shankariayur.com
+										<a href="mailto:"shankariayur@gmail.com" class="d-flex">
+											<i class="me-3 bi-envelope-fill"></i>shankariayur@gmail.com
 										</a>
 									</li>
 									<li class="mb-3 d-flex">
