--- a/contactUs.html
+++ b/contactUs.html
@@ -109,7 +109,7 @@
                             <!-- Let's Talk -->
                           </div>
                           <p class="width-70 lg-width-85 md-width-50 sm-width-60 sm-margin-10px-bottom mx-auto">
-                            <a href="tel:+91 9908157287">+91 9908157287</a>
+                            <a href="tel:+91 8919603936">+91 8919603936 </a>
                           </p>
                         </div>
                         <!-- end features box item -->
@@ -131,7 +131,7 @@
                             <!-- E-mail Us -->
                           </div>
                           <p class="width-70 lg-width-85 md-width-50 sm-width-60 sm-margin-10px-bottom mx-auto">
-                            <a href="mailto:shankariayurveda@shankariayur.com">shankariayurveda@shankariayur.com</a>
+                            <a href="mailto:shankariayur@gmail.com">shankariayur@gmail.com</a>
                           </p>
                         </div>
                         <!-- end features box item -->
@@ -193,7 +193,7 @@
 					<div class="row gx-4 gy-5">
 						<div class="col-lg-8 col-6 d-flex justify-content-center">
 							<div class="container m-0 p-0 d-flex align-items-center">
-								<a href="./index.html"><img src="./images/icons/Shankari_Logo-2.png" alt="Shankari Logo" style="width: 250px; height: auto;"></a>
+								<img src="./images/icons/Shankari_Logo-2.png" alt="Shankari Logo" style="width: 250px; height: auto;">
 							</div>
 						</div>
 					
@@ -202,13 +202,13 @@
 								<h4 class="text-uppercase mb-4">Need Help?</h4>
 								<ul class="list-unstyled">
 									<li class="mb-3">
-										<a href="tel:+91 9908157287" class="d-flex">
-											<i class="me-3 bi-telephone-fill"></i>+91 9908157287
+										<a href="tel:+91 8919603936" class="d-flex">
+											<i class="me-3 bi-telephone-fill"></i>+91 8919603936
 										</a>
 									</li>
 									<li class="mb-3">
-										<a href="mailto:shankariayurveda@shankariayur.com" class="d-flex">
-											<i class="me-3 bi-envelope-fill"></i>shankariayurveda@shankariayur.com
+										<a href="mailto:"shankariayur@gmail.com" class="d-flex">
+											<i class="me-3 bi-envelope-fill"></i>shankariayur@gmail.com
 										</a>
 									</li>
 									<li class="mb-3 d-flex">
