--- a/contactUs.html
+++ b/contactUs.html
@@ -207,7 +207,7 @@
 										</a>
 									</li>
 									<li class="mb-3">
-										<a href="mailto:"shankariayur@gmail.com" class="d-flex">
+										<a href="mailto:shankariayur@gmail.com" class="d-flex">
 											<i class="me-3 bi-envelope-fill"></i>shankariayur@gmail.com
 										</a>
 									</li>
